worked on ui pages and links

--- a/styles/login.css
+++ b/styles/login.css
@@ -93,4 +93,11 @@ input[type="submit"]{
         border-radius: 0.3rem;
     }
 
+    #customer{
+        background: white;
+        color: #ea5b31;
+        padding: 1rem;
+        border-radius: 3px;
+    }
+
 }
