--- a/styles/selection.css
+++ b/styles/selection.css
@@ -53,16 +53,16 @@ h4.available{
 }
 
 .mealDetails {
-    padding: 0.3rem;
+    padding: 1.2rem;
 }
 
 .Meals{
     width: 100%;
     padding: 1em;
     display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-auto-rows: 250px;
+    grid-gap: 1.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 300px;
     text-align: left;
    
 }
@@ -72,6 +72,21 @@ h4.available{
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19); 
     overflow: hidden;
     border-radius: 3px;
+    position: relative;
+}
+
+.order{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background: #EA5B31;
+    padding: 0.5rem 1rem;
+    color: white;
+    border-radius: 3px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+
 }
 
 .meal img{
