--- a/styles/caterer.css
+++ b/styles/caterer.css
@@ -143,6 +143,10 @@
       background-color: #ddd;
     }
 
+    .manageMenu a, .manageMeals a{
+        color: white;
+    }
+
 @media only screen and ( max-width: 600px ) {
 .catererDashboard{
     display: grid;
