--- a/styles/login.css
+++ b/styles/login.css
@@ -80,7 +80,7 @@ input[type="submit"]{
 @media only screen and (min-width: 600px) {
     .loginSection{
         padding-top: 3rem;
-        height: 90vh;
+        height: 100vh;
         background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../assets/images/loginbg.png) no-repeat center;
         background-size: cover;
         
@@ -93,7 +93,14 @@ input[type="submit"]{
         border-radius: 0.3rem;
     }
 
-    #customer{
+    #customer:active{
+        background: white;
+        color: #ea5b31;
+        padding: 1rem;
+        border-radius: 3px;
+    }
+
+    #restaurant:active{
         background: white;
         color: #ea5b31;
         padding: 1rem;
